fix icon gap

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ button.show-button {
   transition: background-color 0.3s;
 }
 .social {
-  gap: 10px;
+  gap: 30px;
   padding-top: 20px;
 }
 .social img {
